# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "nanopb_rpc_proto_library",
    "pw_proto_filegroup",
)
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

pw_proto_filegroup(
    name = "system_proto_and_options",
    srcs = ["system.proto"],
    options_files = ["system.options"],
)

proto_library(
    name = "system_proto",
    srcs = [":system_proto_and_options"],
    import_prefix = "modules/rpc",
    strip_import_prefix = "/modules/rpc",
    deps = [
        "@pigweed//pw_protobuf:common_proto",
    ],
)

nanopb_proto_library(
    name = "system_nanopb",
    deps = [":system_proto"],
)

nanopb_rpc_proto_library(
    name = "system_nanopb_rpc",
    nanopb_proto_library_deps = [":system_nanopb"],
    deps = [":system_proto"],
)

py_proto_library(
    name = "system_protos_py_pb2",
    deps = [":system_proto"],
)

cc_library(
    name = "system_service",
    srcs = ["system_service.cc"],
    hdrs = ["system_service.h"],
    includes = ["public"],
    deps = [
        ":system_nanopb_rpc",
        "//drivers:system",
        "@pico-sdk//src/rp2_common/hardware_adc",
        "@pico-sdk//src/rp2_common/pico_bootrom",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_log",
    ],
)
