# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "state_manager",
    srcs = ["state_manager.cc"],
    hdrs = ["state_manager.h"],
    implementation_deps = [
        "@pigweed//pw_log",
        "@pigweed//pw_string:format",
    ],
    deps = [
        ":common_base_union",
        "//modules/air_sensor",
        "//modules/led:polychrome_led",
        "//modules/pubsub:events",
        "//modules/worker",
        "@pigweed//pw_assert",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_string:string",
    ],
)

cc_library(
    name = "common_base_union",
    hdrs = ["common_base_union.h"],
    visibility = ["//visibility:private"],
)
