# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "system",
    srcs = ["system.cc"],
    deps = [
        ":stream_channel",
        "//modules/board:board_fake",
        "//modules/led:monochrome_led_fake",
        "//modules/led:polychrome_led_fake",
        "//system:headers",
        "@pigweed//pw_channel",
        "@pigweed//pw_multibuf:simple_allocator",
        "@pigweed//pw_system:async",
        "@pigweed//pw_system:io",
    ],
)

cc_library(
    name = "stream_channel",
    srcs = ["stream_channel.cc"],
    hdrs = ["stream_channel.h"],
    deps = [
        "@pigweed//pw_channel",
        "@pigweed//pw_log",
        "@pigweed//pw_stream",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_sync:thread_notification",
    ],
)
